<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abcd.dicodingsubmissionbelajarfundamentalaplikasiandroid.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.abcd.dicodingsubmissionbelajarfundamentalaplikasiandroid.ui.fragment.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.abcd.dicodingsubmissionbelajarfundamentalaplikasiandroid.ui.fragment.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.abcd.dicodingsubmissionbelajarfundamentalaplikasiandroid.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.abcd.dicodingsubmissionbelajarfundamentalaplikasiandroid.ui.fragment.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>
</navigation>