<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment"
    android:layout_margin="14dp"
    android:layout_marginBottom="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:text="@string/dicoding_event"
            style="@style/TextNormal.TextHeader"/>

        <View
            android:id="@+id/srcData"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_card_no_padding"/>

        <TextView
            android:id="@+id/tvSrcData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/srcData"
            app:layout_constraintBottom_toBottomOf="@id/srcData"
            app:layout_constraintStart_toStartOf="@id/srcData"
            app:layout_constraintEnd_toEndOf="@id/srcData"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/cari_events"
            android:gravity="center_vertical"
            style="@style/TextNormal.TextNormal.TextGrey"/>

        <TextView
            android:id="@+id/tvTitleUpcomingEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/srcData"
            android:layout_marginTop="18dp"
            android:text="@string/upcoming_events"
            style="@style/TextBold.TextNormal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcomingEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitleUpcomingEvents"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/item_list_finished_events"
            tools:itemCount="2"/>

        <TextView
            android:id="@+id/tvTitleFinishedEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvUpcomingEvents"
            android:layout_marginTop="18dp"
            android:text="@string/finished_events"
            style="@style/TextBold.TextNormal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFinishedEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitleFinishedEvents"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/item_list_finished_events"
            tools:itemCount="2"
            android:visibility="gone"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/smFinishedEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitleFinishedEvents"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/sm_item_list_finished_events"/>
                <include layout="@layout/sm_item_list_finished_events"/>
                <include layout="@layout/sm_item_list_finished_events"/>
                <include layout="@layout/sm_item_list_finished_events"/>
                <include layout="@layout/sm_item_list_finished_events"/>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>