<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail_event.DetailEventActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryColor"
        app:title="Halaman Detail"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24_white"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/llButton">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivGambarEvent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image"
                android:src="@drawable/image_error"
                android:scaleType="fitXY"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/smImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ivGambarEvent"
                android:visibility="visible">
                <include layout="@layout/sm_gambar_detail_event"/>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/smImage"
                app:layout_constraintBottom_toBottomOf="@id/smImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_favorite_border_24"
                android:background="@drawable/bg_bulat"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPenjelasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/smImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tvNameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nama_event"
                    android:textColor="@color/textColorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvNameEvent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4dp" />

                <TextView
                    android:id="@+id/tvTitlePenyelenggaraEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvSummary"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/penyelenggara"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPenyelenggaraEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTitlePenyelenggaraEvent"
                    app:layout_constraintStart_toEndOf="@id/tvTitlePenyelenggaraEvent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvTitleKuota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvPenyelenggaraEvent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/kuota"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvKuota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTitleKuota"
                    app:layout_constraintStart_toEndOf="@id/tvTitleKuota"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvTitlePelaksanaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvKuota"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="@string/pelaksanaan"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPelaksanaan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTitlePelaksanaan"
                    app:layout_constraintStart_toEndOf="@id/tvTitlePelaksanaan"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvTitleLokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvPelaksanaan"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="@string/lokasi"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLokasi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTitleLokasi"
                    app:layout_constraintStart_toEndOf="@id/tvTitleLokasi"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:id="@+id/tvTitleKategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLokasi"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="@string/kategori"
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvKategori"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTitleKategori"
                    app:layout_constraintStart_toEndOf="@id/tvTitleKategori"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text=""
                    android:textColor="@color/textColorBlack"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4dp"/>

                <TextView
                    android:id="@+id/tvTitleDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvKategori"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/deskripsi_event"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleDeskripsi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:lineSpacingExtra="4dp" />

                <WebView
                    android:id="@+id/wvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleDeskripsi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    tools:ignore="WebViewLayout"
                    android:visibility="gone"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/smPenjelasan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clPenjelasan"
                android:visibility="visible">
                <include layout="@layout/sm_detail_event"/>
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/bg_card_no_radius_primary">
        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="@color/textColorWhite"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="visible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>